# rstml

./: .gitignore  .tarpaulin.toml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  comparsion-with-syn-rsx.md  generate_changelog.sh
.github/workflows/: bench.yml  ci.yml  coverage.yml
benches/: bench.rs
examples/html-to-string-macro/: Cargo.toml
examples/html-to-string-macro/src/: control_flow.rs  escape.rs  lib.rs
examples/html-to-string-macro/tests/: compiletests.rs  tests.rs
examples/html-to-string-macro/tests/ui/: doctype.rs  multiple_errors.rs  multiple_errors.stderr  no_open_tag.rs  no_open_tag.stderr  node_block_with_dot.rs  not_closed_tag.rs  not_closed_tag.stderr
rstml/: Cargo.toml  build.rs
rstml-control-flow/: Cargo.toml  README.md
rstml-control-flow/src/: escape.rs  extendable.rs  lib.rs  tags.rs
rstml-controll-flow/: Cargo.toml  README.md
rstml-controll-flow/src/: escape.rs  extendable.rs  lib.rs  tags.rs
rstml/benches/: bench.rs
rstml/src/: config.rs  lib.rs  rawtext_stable_hack.rs  visitor.rs
rstml/src/node/: atoms.rs  attribute.rs  mod.rs  node_name.rs  node_value.rs  parse.rs  parser_ext.rs  raw_text.rs
rstml/src/parser/: mod.rs  recoverable.rs
rstml/tests/: custom_node.rs  recoverable_parser.rs  test.rs
src/: config.rs  lib.rs  rawtext_stable_hack.rs  visitor.rs
src/node/: attribute.rs  mod.rs  node_name.rs  node_value.rs  parse.rs  parser_ext.rs  raw_text.rs  tokens.rs
src/node/component_tree/: mod.rs  node_block.rs  node_comment.rs  node_doctype.rs  node_element.rs  node_fragment.rs  node_rawtext.rs  node_text.rs
src/node/component_tree/node_element/: node_attribute.rs  node_name.rs
src/parser/: mod.rs  recoverable.rs
tests/: custom_node.rs  recoverable_parser.rs  test.rs
