[workspace.package]
description = "Rust templating for XML-based formats (HTML, SVG, MathML) implemented on top of proc-macro::TokenStreams"
authors = ["vldm <me@vldm.cc>", "stoically <stoically@protonmail.com>"]
keywords = ["syn", "jsx", "rsx", "html", "macro"]
edition = "2021"
repository = "https://github.com/rs-tml/rstml"
license = "MIT"
license-file = "LICENSE"

include = ["/src", "build.rs", "LICENSE"]
readme = "README.md"

[workspace]
resolver = "2"
members = ["examples/html-to-string-macro", "rstml-control-flow"]

[workspace.dependencies]
# Our packages
rstml = { version = "0.12.0", path = "rstml" }
rstml-control-flow = { version = "0.1.0", path = "rstml-control-flow" }
# external dependencies
proc-macro2 = { version = "1.0.93", features = ["span-locations"] }
quote = "1.0.38"
syn = { version = "2.0.96", features = [
    "visit-mut",
    "full",
    "parsing",
    "extra-traits",
] }
thiserror = "2.0.11"
syn_derive = "0.2.0"
proc-macro2-diagnostics = { version = "0.10", default-features = false }
derive-where = "1.2.7"
# dev-dependencies
criterion = "0.5.1"
eyre = "0.6.12"
trybuild = "1.0"
