[package]
name = "rstml-control-flow"
description = "Custom nodes with control flow implementation for rstml. Usefull when you need to implement If, For, etc."
version = "0.1.1"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
include = ["/src", "../LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
syn_derive.workspace = true
proc-macro2-diagnostics.workspace = true
derive-where.workspace = true
rstml = { workspace = true, features = ["rawtext-stable-hack"] }

[features]
default = []
# If feature activated Node should be parsed through `ExtendableCustomNode::parse2_with_config`
extendable = []
