[package]
name = "rstml-to-string-macro"
description = "simple html to string macro powered by rstml"
version = "0.1.0"
authors = ["vldm <me@vldm.cc>", "stoically <stoically@protonmail.com>"]
keywords = ["html-to-string", "html", "macro"]
edition = "2021"
repository = "https://github.com/rs-tml/rstml/tree/main/examples/html-to-string-macro"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "2.0.15"
syn_derive = "0.1"
rstml = { version = "0.11.0", path = "../../", features = [
    "rawtext-stable-hack",
] }
proc-macro2-diagnostics = "0.10"
derive-where = "1.2.5"
rstml-controll-flow = { version = "0.1.0", path = "../../rstml-controll-flow" }

[dev-dependencies]
trybuild = "1.0"
