[package]
name = "rstml-to-string-macro"
description = "simple html to string macro powered by rstml"
version = "0.1.0"
authors.workspace = true
keywords.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
include.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
syn_derive.workspace = true
rstml = { workspace = true, features = ["rawtext-stable-hack"] }
proc-macro2-diagnostics.workspace = true
derive-where.workspace = true
rstml-control-flow.workspace = true

[dev-dependencies]
trybuild.workspace = true
